--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
     "framer-motion": "7.2.1",
+    "mongoose": "^6.5.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
