--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.1",
     "@chakra-ui/react": "2.2.9",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
+    "bcrypt": "^5.0.1",
     "framer-motion": "7.2.1",
     "mongoose": "^6.5.3",
     "next": "12.2.5",
