--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.9.1",
+    "@auth0/nextjs-auth0": "1.9.1",
     "@chakra-ui/react": "2.2.9",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "2.4.3",
     "framer-motion": "7.2.1",
-    "mongoose": "^6.5.3",
+    "mongoose": "6.5.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
