login/register user db

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,5 @@ MONGO_URL=mongodb://frankvedo:frankvedo@localhost:27018/?authMechanism=DEFAULT
 
 GOOGLE_CLIENT_ID=257986411627-7a5vump7rd3lbkvb9og1chve1bgfnqki.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+
+NEXTAUTH_SECRET=3ba8c6c961d4a2d1eb131db483d9f111
