--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "mongoose": "6.5.3",
     "next": "12.2.5",
     "next-auth": "4.10.3",
+    "nodemailer": "6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.34.2",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.5.0",
-    "@types/bcryptjs": "^2.4.2",
+    "@faker-js/faker": "7.5.0",
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "18.7.13",
+    "@types/nodemailer": "6.4.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.30.5",
