--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+HOST_URL=localhost:3000
+
 # Mongo Local
 MONGO_URL=mongodb://frankvedo:frankvedo@localhost:27018/?authMechanism=DEFAULT
 # Mongo Production
