--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
     "bcryptjs": "2.4.3",
+    "chart.js": "3.9.1",
     "framer-motion": "7.2.1",
     "mongoose": "6.5.3",
     "next": "12.2.5",
     "next-auth": "4.10.3",
     "nodemailer": "6.7.8",
     "react": "18.2.0",
+    "react-chartjs-2": "4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.34.2",
     "react-icons": "^4.4.0"
