--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
     "bcryptjs": "2.4.3",
+    "boring-avatars": "^1.7.0",
     "chart.js": "3.9.1",
     "framer-motion": "7.2.1",
     "mongoose": "6.5.3",
