--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
     "bcryptjs": "2.4.3",
-    "boring-avatars": "^1.7.0",
+    "boring-avatars": "1.7.0",
     "chart.js": "3.9.1",
     "framer-motion": "7.2.1",
     "mongoose": "6.5.3",
@@ -25,7 +25,8 @@
     "react-chartjs-2": "4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.34.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "4.4.0",
+    "swr": "1.3.0"
   },
   "devDependencies": {
     "@faker-js/faker": "7.5.0",
